<?xml version="1.0"?>
<package format="2">
  <name>behavior_selector2</name>
  <version>0.0.0</version>
  <description>GUI for selecting global flight mode</description>

  <maintainer email="brett@todo.todo">brett</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

   <!-- <build_depend>message_generation</build_depend> -->
   <build_depend>rosidl_default_generators</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <rqt_gui plugin="${prefix}/plugin.xml"/>
     <build_type>ament_cmake</build_type>
  </export>
</package>
